Updated Changes for Adapt

--- a/usbSerialExamples/build.gradle
+++ b/usbSerialExamples/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 19
@@ -8,13 +8,13 @@ android {
         minSdkVersion 14
         targetSdkVersion 19
 
-        testPackageName "com.hoho.android.usbserial.examples"
-        testInstrumentationRunner "android.test.InstrumentationTestRunner"
+      //  testPackageName "com.hoho.android.usbserial.examples"
+      //  testInstrumentationRunner "android.test.InstrumentationTestRunner"
     }
 
     buildTypes {
         release {
-            runProguard true
+            //runProguard true
         }
     }
 }
