--- a/usbSerialForAndroid/build.gradle
+++ b/usbSerialForAndroid/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'android-library'
 apply plugin: 'maven'
 apply plugin: 'signing'
-
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.1"
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         minSdkVersion 12
@@ -13,38 +12,34 @@ android {
 
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+//            runProguard false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+        debug {
+            debuggable true
         }
     }
 }
-
 group = "com.hoho.android"
 version = "0.2.0-SNAPSHOT"
-
 configurations {
     archives {
         extendsFrom configurations.default
     }
 }
-
 signing {
     required { has("release") && gradle.taskGraph.hasTask("uploadArchives") }
     sign configurations.archives
 }
-
 def getRepositoryUsername() {
     return hasProperty('sonatypeUsername') ? sonatypeUsername : ""
 }
-
 def getRepositoryPassword() {
     return hasProperty('sonatypePassword') ? sonatypePassword : ""
 }
-
 def isReleaseBuild() {
     return version.contains("SNAPSHOT") == false
 }
-
 uploadArchives {
     def sonatypeRepositoryUrl
     if (isReleaseBuild()) {
@@ -96,4 +91,7 @@ uploadArchives {
             }
         }
     }
+}
+
+dependencies {
 }
